// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    checked={true}
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={true}
        className="sc-McAUB gEVtAg"
      />
    </span>
    <p
      className="sc-eEXVIU gZHATu"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
    <p
      className="sc-eEXVIU gZHATu"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
    <p
      className="sc-eEXVIU gZHATu"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
    <p
      className="sc-eEXVIU gZHATu"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
